Fix horizontal scroll and add Encounter Result message

--- a/Client/wwwroot/css/app.scss
+++ b/Client/wwwroot/css/app.scss
@@ -1,5 +1,6 @@
 ﻿html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    overflow-x: hidden;
 }
 
 .nav-item {
